c_prototypes.h

void koota_lor_real8(void * invec, void * inoutvec, size_t len);
void koota_lxor_real8(void * invec, void * inoutvec, size_t len);
void koota_min_real10(void * invec, void * inoutvec, size_t len);
void koota_max_real10(void * invec, void * inoutvec, size_t len);
void koota_sum_real10(void * invec, void * inoutvec, size_t len);
void koota_prod_real10(void * invec, void * inoutvec, size_t len);
void koota_band_real10(void * invec, void * inoutvec, size_t len);
void koota_bor_real10(void * invec, void * inoutvec, size_t len);
void koota_bxor_real10(void * invec, void * inoutvec, size_t len);
void koota_land_real10(void * invec, void * inoutvec, size_t len);
void koota_lor_real10(void * invec, void * inoutvec, size_t len);
void koota_lxor_real10(void * invec, void * inoutvec, size_t len);
void koota_min_real16(void * invec, void * inoutvec, size_t len);
void koota_max_real16(void * invec, void * inoutvec, size_t len);
void koota_sum_real16(void * invec, void * inoutvec, size_t len);
void koota_prod_real16(void * invec, void * inoutvec, size_t len);
void koota_band_real16(void * invec, void * inoutvec, size_t len);
void koota_bor_real16(void * invec, void * inoutvec, size_t len);
void koota_bxor_real16(void * invec, void * inoutvec, size_t len);
void koota_land_real16(void * invec, void * inoutvec, size_t len);